# adl

./: .coveragerc  .dockerignore  .env.sample  .gitignore  .readthedocs.yaml  CLAUDE.md  Dockerfile  Dockerfile-base  Dockerfile-linux  LEGAL.md  MANIFEST.in  Makefile  README.md  data.json  db-restore-guide.md  docker-compose.dev.yml  docker-compose.override.sample.yml  docker-compose.override.yml.sample  docker-compose.yml  docker-entrypoint.sh  manage.py  network_data.json  plugins.toml.sample  pytest.ini  setup.cfg
adl/: dev.txt  pyproject.toml  requirements.txt
adl/src/adl/: __init__.py  manage.py  version.py
adl/src/adl/api/: apps.py  auth.py  pagination.py  schema_hooks.py  serializers.py  urls.py  utils.py  views.py
adl/src/adl/config/: asgi.py  celery.py  urls.py  wsgi.py
adl/src/adl/config/settings/: base.py  production.py
adl/src/adl/config/templates/: base.html
adl/src/adl/config/templatetags/: adl_tags.py
adl/src/adl/core/: aggregation.py  apps.py  blocks.py  components.py  constants.py  date_utils.py  forms.py  home.py  logging.py  models.py  plugin_utils.py  registries.py  registry.py  serializers.py  table.py  tasks.py  test_plugin.py  units.py  urls.py  utils.py  validators.py  views.py  viewsets.py  wagtail_hooks.py  widgets.py
adl/src/adl/core/bulk_actions/: __init__.py  delete.py
adl/src/adl/core/dispatchers/: __init__.py  wis2box.py
adl/src/adl/core/migrations/: 0001_initial.py  0002_networkconnection_is_daily_data_and_more.py  0002_networkconnection_name.py  0003_alter_networkconnection_name.py  0003_remove_observationrecord_unique_station_param_obs_record_and_more.py  0004_dispatchchannel_network_connection_and_more.py  0004_remove_dispatchchannel_last_upload_obs_time_and_more.py  0005_adlsettings_aggregate_from_date.py  0005_auto_20241128_1952.py  0006_alter_station_network.py  0006_observationrecord_delete_dataingestionrecord_and_more.py  0007_alter_dailyaggregatedobservationrecord_connection_and_more.py  0007_alter_wis2boxupload_options_and_more.py  0008_dispatchchannel_data_check_interval_and_more.py  0008_remove_adlsettings_aggregate_from_date_and_more.py  0009_dispatchchannel_last_upload_obs_time.py  0009_remove_adlsettings_hourly_aggregation_interval.py  0010_observationrecord_is_daily_and_more.py  0010_stationlink_enabled_and_more.py  0011_alter_stationchanneldispatchstatus_options_and_more.py  0011_remove_wis2boxupload_wis2box_hourly_aggregate_and_more.py  0012_alter_dispatchchannelparametermapping_aggregation_measure_and_more.py  0012_dispatchchannel_start_date.py  0013_alter_dispatchchannel_start_date.py  0013_remove_dispatchchannelparametermapping_aggregation_measure_and_more.py  0014_dispatchchannel_public_url.py  0015_adlsettings_daily_aggregation_time_and_more.py  (+38 more)
adl/src/adl/monitoring/: apps.py  constants.py  models.py  panels.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py  wagtail_hooks.py
adl/src/adl/utils/: version.py
adl/src/adl/viewer/: apps.py  blocks.py  display_urls.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
adl/src/adl/wis2box/: apps.py  models.py  utils.py  views.py  wagtail_hooks.py
wis2box_adl/: MANIFEST.in  apps.py  constants.py  forms.py  models.py  pyproject.toml  requirements.txt  utils.py  views.py  wagtail_hooks.py  wsgi.py
wis2box_adl/migrations/: 0001_initial.py  0002_create_default_data_parameters.py
wis2box_adl/settings/: base.py
wis2box_adl/src/wis2box_adl/: __init__.py  manage.py
wis2box_adl/src/wis2box_adl/config/: asgi.py  celery.py  urls.py  wsgi.py
wis2box_adl/src/wis2box_adl/core/: apps.py  constants.py  forms.py  home.py  models.py  registries.py  registry.py  serializers.py  tasks.py  units.py  urls.py  utils.py  views.py  wagtail_hooks.py  widgets.py  wis2box.py  wis2box_upload.py
wis2box_adl/static/wis2box_adl/js/: helpers.js
wis2box_adl/templates/: base.html
wis2box_adl/templates/wis2box_adl/: load_stations_oscar.html  stations_csv_template.html
(+354 files in other folders)
