[metadata]
name = wis2box-adl
version = 0.0.1
description = WIS2Box Automated Data Loader
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/wmo-raf/wis2box-automated-data-loader
author = Erick Otenyo
author_email = otenyo.erick@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    wagtail>=4.2.2
    django-timescaledb>=0.2.13
    django-countries>=7.6.1
    django-countries-geoextent>=0.0.1
    pyoscar>=0.7.0


