[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wis2box_adl"
authors = [{ name = "Erick Otenyo", email = "otenyo.erick@gmail.com" }]
description = """Wagtail based tool for automating periodic Observation \
                    data ingestion into WIS2Box node, \
                    from Automatic and or Manual Weather Stations."""

license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]
classifiers = []


[project.scripts]
manage = "wis2box_adl.manage:main"


[tool.setuptools]
include-package-data = true
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"]

[tool.setuptools.packages.find]
namespaces = true
where = ["src/"]
include = ["wis2box_adl", "wis2box_adl.*"]

[tool.setuptools.dynamic]
# version always from the code
version = { attr = "wis2box_adl.version.VERSION" }
dependencies = { file = ["requirements.txt"] }
